IaC/k8s/ingress-argo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-cd-argocd-server
            port: 
              name: https
    host: argo.momo-store.ml
  tls:
  - hosts:
    - argo.momo-store.ml
    secretName: argocd-secret
